--- a/examples/mbed-blink/platformio.ini
+++ b/examples/mbed-blink/platformio.ini
@@ -1,4 +1,9 @@
-[env:blink]
+[env:w7500p]
 platform = H12
 framework = mbed
 board = wizwiki_w7500p
+build_flags = -DPIO_FRAMEWORK_MBED_RTOS_PRESENT
+debug_tool = cmsis-dap
+upload_protocol = cmsis-dap
+;debug_tool = jlink
+;upload_protocol = jlink
