--- a/examples/mbed-events/platformio.ini
+++ b/examples/mbed-events/platformio.ini
@@ -1,5 +1,6 @@
-[env:event]
+[env:wizwiki_w7500p]
 platform = H12
 framework = mbed
 board = wizwiki_w7500p
 build_flags = -DPIO_FRAMEWORK_MBED_RTOS_PRESENT
+
