--- a/examples/mbed-rtos/platformio.ini
+++ b/examples/mbed-rtos/platformio.ini
@@ -1,3 +1,5 @@
+[platformio]
+default_envs = wizwiki_w7500p
 
 [env:wizwiki_w7500p]
 platform = H12
@@ -5,3 +7,8 @@ framework = mbed
 board = wizwiki_w7500p
 build_flags = -DPIO_FRAMEWORK_MBED_RTOS_PRESENT
 
+[env:wizwiki_w7500eco]
+platform = H12
+framework = mbed
+board = wizwiki_w7500eco
+build_flags = -DPIO_FRAMEWORK_MBED_RTOS_PRESENT
