--- a/examples/mbed-dsp/platformio.ini
+++ b/examples/mbed-dsp/platformio.ini
@@ -1,7 +1,5 @@
-[env:wizwiki_w7500]
-platform = H12
-framework = mbed
-board = wizwiki_w7500
+[platformio]
+default_envs = wizwiki_w7500p
 
 [env:wizwiki_w7500p]
 platform = H12
