--- a/examples/mbed-events/platformio.ini
+++ b/examples/mbed-events/platformio.ini
@@ -1,6 +1,14 @@
+[platformio]
+default_envs = wizwiki_w7500p
+
 [env:wizwiki_w7500p]
 platform = H12
 framework = mbed
 board = wizwiki_w7500p
 build_flags = -DPIO_FRAMEWORK_MBED_RTOS_PRESENT
 
+[env:wizwiki_w7500eco]
+platform = H12
+framework = mbed
+board = wizwiki_w7500eco
+build_flags = -DPIO_FRAMEWORK_MBED_RTOS_PRESENT
