--- a/examples/mbed-serial/platformio.ini
+++ b/examples/mbed-serial/platformio.ini
@@ -1,14 +1,12 @@
-; [env:wizwiki_w7500]
-; platform = H12
-; framework = mbed
-; board = wizwiki_w7500
+[platformio]
+default_envs = wizwiki_w7500p
 
 [env:wizwiki_w7500p]
 platform = H12
 framework = mbed
 board = wizwiki_w7500p
 
-; [env:wizwiki_w7500eco]
-; platform = H12
-; framework = mbed
-; board = wizwiki_w7500eco
+[env:wizwiki_w7500eco]
+platform = H12
+framework = mbed
+board = wizwiki_w7500eco
