--- a/examples/mbed-blink/platformio.ini
+++ b/examples/mbed-blink/platformio.ini
@@ -1,12 +1,12 @@
 [platformio]
-default_envs = wizwiki_w7500p
+default_envs = W7500P
 
-[env:wizwiki_w7500p]
+[env:W7500P]
 platform = H12
 framework = mbed
-board = wizwiki_w7500p
+board = W7500P
 
-[env:wizwiki w7500eco]
+[env:w7500eco]
 platform = H12
 framework = mbed
 board = wizwiki_w7500eco
