--- a/examples/mbed-blink/platformio.ini
+++ b/examples/mbed-blink/platformio.ini
@@ -4,7 +4,7 @@ default_envs = W7500P
 [env:W7500P]
 platform = H12
 framework = mbed
-board = W7500P
+board = wizwiki_w7500p
 
 [env:w7500eco]
 platform = H12
