--- a/appveyor.yml
+++ b/appveyor.yml
@@ -8,11 +8,15 @@ environment:
     - PLATFORMIO_PROJECT_DIR: "examples/mbed-rtos"
     - PLATFORMIO_PROJECT_DIR: "examples/mbed-serial"
 
+platform:
+  - x64
+
 install:
-  - cmd: git submodule update --init --recursive
-  - cmd: SET PATH=C:\Python36\Scripts;%PATH%
-  - cmd: pip3 install -U https://github.com/platformio/platformio/archive/develop.zip
-  - cmd: platformio platform install file://.
+- cmd: git submodule update --init --recursive
+- cmd: SET PATH=C:\Python38-x64;C:\Python38-x64\Scripts;%PATH%
+- cmd: pip3 install -U https://github.com/OS-Q/S03/archive/master.zip
+- cmd: platformio platform install file://.
 
 test_script:
-  - cmd: platformio run -d %PLATFORMIO_PROJECT_DIR%
+- cmd: platformio run -d %PLATFORMIO_PROJECT_DIR%
+
