--- a/examples/mbed-rtos/platformio.ini
+++ b/examples/mbed-rtos/platformio.ini
@@ -1,14 +1,26 @@
-[platformio]
-default_envs = W7500P
+; PlatformIO Project Configuration File
+;
+;   Build options: build flags, source filter, extra scripting
+;   Upload options: custom port, speed and extra flags
+;   Library options: dependencies, extra library storages
+;
+; Please visit documentation for the other options and examples
+; http://docs.platformio.org/page/projectconf.html
 
-[env:W7500P]
-platform = H12
+[env:wizwiki_w7500]
+platform = wiznet7500
+framework = mbed
+board = wizwiki_w7500
+build_flags = -DPIO_FRAMEWORK_MBED_RTOS_PRESENT
+
+[env:wizwiki_w7500p]
+platform = wiznet7500
 framework = mbed
 board = wizwiki_w7500p
 build_flags = -DPIO_FRAMEWORK_MBED_RTOS_PRESENT
 
 [env:wizwiki_w7500eco]
-platform = H12
+platform = wiznet7500
 framework = mbed
 board = wizwiki_w7500eco
 build_flags = -DPIO_FRAMEWORK_MBED_RTOS_PRESENT
