--- a/examples/mbed-serial/platformio.ini
+++ b/examples/mbed-serial/platformio.ini
@@ -1,12 +1,23 @@
-[platformio]
-default_envs = W7500P
+; PlatformIO Project Configuration File
+;
+;   Build options: build flags, source filter, extra scripting
+;   Upload options: custom port, speed and extra flags
+;   Library options: dependencies, extra library storages
+;
+; Please visit documentation for the other options and examples
+; http://docs.platformio.org/page/projectconf.html
 
-[env:W7500P]
-platform = H12
+[env:wizwiki_w7500]
+platform = wiznet7500
+framework = mbed
+board = wizwiki_w7500
+
+[env:wizwiki_w7500p]
+platform = wiznet7500
 framework = mbed
 board = wizwiki_w7500p
 
 [env:wizwiki_w7500eco]
-platform = H12
+platform = wiznet7500
 framework = mbed
 board = wizwiki_w7500eco
