--- a/.github/workflows/OSQ.yml
+++ b/.github/workflows/OSQ.yml
@@ -1,4 +1,4 @@
-name: P16
+name: P17
 
 on: [push, pull_request]
 
@@ -8,13 +8,11 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-latest, windows-latest, macos-latest]
-        python-version: [3.8]
+        python-version: [3.7]
         example:
           - "examples/mbed-blink"
-          - "examples/mbed-dsp"
-          - "examples/mbed-events"
           - "examples/mbed-rtos"
-          - "examples/mbed-serial"
+
     runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v2
@@ -24,11 +22,11 @@ jobs:
         uses: actions/setup-python@v1
         with:
           python-version: ${{ matrix.python-version }}
-      - name: Install dependencies
+      - name: Install S03
         run: |
           python -m pip install --upgrade pip
           pip install -U https://github.com/OS-Q/S03/archive/master.zip
           platformio platform install file://.
-      - name: Build examples
+      - name: Build P17
         run: |
           platformio run -d ${{ matrix.example }}
