--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,19 @@
 *.pyc
-.pio/
-.vscode/
+*__pyc*/
+*.pio/
+*.vscode/
+misc/svd/*.html
+*.rst
+examples/**/*.yml
+examples/**/*.md
+**/CONTR*
+**/CHANGE*
+.gitmodules
+**/*/README*
+LICENSE*
+*.png
+*.jpg
+*.rst
+# *.md
+**/*/README*
+README
