--- a/examples/mbed-dsp/platformio.ini
+++ b/examples/mbed-dsp/platformio.ini
@@ -17,7 +17,7 @@ platform = P53
 framework = mbed
 board = wizwiki_w7500p
 
-[env:wizwiki w7500eco]
+[env:wizwiki_w7500eco]
 platform = P53
 framework = mbed
 board = wizwiki_w7500eco
