--- a/examples/mbed-events/platformio.ini
+++ b/examples/mbed-events/platformio.ini
@@ -16,8 +16,10 @@ board = wizwiki_w7500
 platform = P53
 framework = mbed
 board = wizwiki_w7500p
+build_flags = -DPIO_FRAMEWORK_MBED_RTOS_PRESENT
 
-[env:wizwiki w7500eco]
+[env:wizwiki_w7500eco]
 platform = P53
 framework = mbed
 board = wizwiki_w7500eco
+build_flags = -DPIO_FRAMEWORK_MBED_RTOS_PRESENT
