--- a/examples/mbed-rtos/platformio.ini
+++ b/examples/mbed-rtos/platformio.ini
@@ -1,7 +1,26 @@
-[env]
-platform = P59
-framework = mbed
+; PlatformIO Project Configuration File
+;
+;   Build options: build flags, source filter, extra scripting
+;   Upload options: custom port, speed and extra flags
+;   Library options: dependencies, extra library storages
+;
+; Please visit documentation for the other options and examples
+; http://docs.platformio.org/page/projectconf.html
 
-[env:w7500p]
+[env:wizwiki_w7500]
+platform = P53
+framework = mbed
+board = wizwiki_w7500
+build_flags = -DPIO_FRAMEWORK_MBED_RTOS_PRESENT
+
+[env:wizwiki_w7500p]
+platform = P53
+framework = mbed
 board = wizwiki_w7500p
+build_flags = -DPIO_FRAMEWORK_MBED_RTOS_PRESENT
+
+[env:wizwiki_w7500eco]
+platform = P53
+framework = mbed
+board = wizwiki_w7500eco
 build_flags = -DPIO_FRAMEWORK_MBED_RTOS_PRESENT
