--- a/examples/mbed-blink/link.ini
+++ b/examples/mbed-blink/link.ini
@@ -1,5 +1,3 @@
-
-
 [env:wizwiki_w7500]
 platform = P53
 framework = mbed
@@ -10,7 +8,7 @@ platform = P53
 framework = mbed
 board = wizwiki_w7500p
 
-[env:wizwiki_w7500eco]
+[env:wizwiki w7500eco]
 platform = P53
 framework = mbed
 board = wizwiki_w7500eco
