--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -1,15 +1,16 @@
-name: PIO
+name: CI
 
 on:
   push:
     branches:
-      - pio
+      - master
     paths:
       - 'boards/**'
+      - 'extend/**'
       - 'builder/**'
       - 'examples/**'
-      - 'platform.json'
-      - 'platform.py'
+      - '**.json'
+      - '**.py'
 
 jobs:
   CodeCheck:
@@ -57,7 +58,7 @@ jobs:
           - "mbed-events"
           - "mbed-rtos"
           - "mbed-serial"
-
+        package: ["pio","qio"]
         os: [ubuntu-latest, windows-latest, macos-latest]
     runs-on: ${{ matrix.os }}
     steps:
@@ -71,9 +72,15 @@ jobs:
         with:
           python-version: 3.9
 
-      - name: Install
+      - name: Install qio
+        if: matrix.package == 'qio'
         run: |
-          python -m pip install --upgrade pip
+          pip install -U https://github.com/OS-Q/M03/releases/latest/download/qio.zip
+          qio platform install file://.
+
+      - name: Install pio
+        if: matrix.package == 'pio'
+        run: |
           pip install -U https://github.com/platformio/platformio/archive/develop.zip
           pio platform install file://.
 
@@ -81,4 +88,5 @@ jobs:
         working-directory: examples
         run: |
           pio run -d ${{ matrix.example }}
+
 
