--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -1,16 +1,15 @@
-name: CI
+name: QIO
 
 on:
   push:
     branches:
-      - master
+      - qio
     paths:
       - 'boards/**'
       - 'extend/**'
-      - 'builder/**'
       - 'examples/**'
-      - '**.json'
-      - '**.py'
+      - 'link.json'
+      - 'link.py'
 
 jobs:
   CodeCheck:
@@ -58,7 +57,6 @@ jobs:
           - "mbed-events"
           - "mbed-rtos"
           - "mbed-serial"
-        package: ["pio","qio"]
         os: [ubuntu-latest, windows-latest, macos-latest]
     runs-on: ${{ matrix.os }}
     steps:
@@ -73,16 +71,9 @@ jobs:
           python-version: 3.9
 
       - name: Install qio
-        if: matrix.package == 'qio'
         run: |
           pip install -U https://github.com/OS-Q/M03/releases/latest/download/qio.zip
           qio platform install file://.
-
-      - name: Install pio
-        if: matrix.package == 'pio'
-        run: |
-          pip install -U https://github.com/platformio/platformio/archive/develop.zip
-          pio platform install file://.
 
       - name: Build examples
         working-directory: examples
