--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,29 +13,7 @@ jobs:
             git submodule update --init --recursive
             python -m pip install --upgrade pip
             pip install -U https://github.com/OS-Q/M03/releases/latest/download/qio.zip
-            pio platform install file://.
-      - run:
-          name: "Build"
-          command: |
-            pio run -d examples/mbed-blink
-            pio run -d examples/mbed-dsp
-            pio run -d examples/mbed-events
-            pio run -d examples/mbed-rtos
-            pio run -d examples/mbed-serial
-  PIO:
-    docker:
-      - image: python:3
-    steps:
-      - checkout
-      - run:
-          name: "Install"
-          command: |
-            apt update
-            apt install -y git
-            git submodule update --init --recursive
-            python -m pip install --upgrade pip
-            pip install -U https://github.com/platformio/platformio/archive/develop.zip
-            pio platform install file://.
+            pio platform install https://github.com/OS-Q/P53/archive/qio.zip
       - run:
           name: "Build"
           command: |
@@ -50,4 +28,3 @@ workflows:
     run_ci:
         jobs:
           - QIO
-          - PIO
