--- a/.drone.yml
+++ b/.drone.yml
@@ -9,23 +9,10 @@ steps:
   - apt install -y git
   - git submodule update --init --recursive
   - pip install -U https://github.com/OS-Q/M03/releases/latest/download/qio.zip
-  - pio platform install file://.
+  - pio platform install https://github.com/OS-Q/P53/archive/qio.zip
   - pio run -d examples/mbed-blink
   - pio run -d examples/mbed-dsp
   - pio run -d examples/mbed-events
   - pio run -d examples/mbed-rtos
   - pio run -d examples/mbed-serial
 
-- name: PIO
-  image: python:3
-  commands:
-  - apt update
-  - apt install -y git
-  - git submodule update --init --recursive
-  - pip install -U https://github.com/platformio/platformio/archive/develop.zip
-  - pio platform install file://.
-  - pio run -d examples/mbed-blink
-  - pio run -d examples/mbed-dsp
-  - pio run -d examples/mbed-events
-  - pio run -d examples/mbed-rtos
-  - pio run -d examples/mbed-serial
